# cosmic

./: README.md
G4-simulation/: BessMagnetRun.cc  CMakeLists.txt  README.md  run.mac  vis.mac
G4-simulation/include/: BessMagnet.h  EDMagneticField.hh  G4MaterialFactory.h  MYActionInitialization.hh  MYAnalysis.hh  MYDetectorConstruction.hh  MYEventAction.hh  MYPrimaryGeneratorAction.hh  MYRunAction.hh  MYScintTrigHit.hh  MYScintTrigSD.hh  MYTrackerHit.hh  MYTrackerSD.hh  MaterialFactory.h  MeV2ChargeConverter.hh  MessageManager.h  NoiseGenerator.hh  P1DetectorMagnet.h  P1DetectorParts.h  PMagneticField.h  RootSaver.hh  ScintDigit.hh  ScintDigitizer.hh  TrackerDigit.hh  TrackerDigitizer.hh  Utility.h  material.h  params_common.h
G4-simulation/src/: BessMagnet.cc  EDMagneticField.cc  G4MaterialFactory.cc  MYActionInitialization.cc  MYDetectorConstruction.cc  MYEventAction.cc  MYPrimaryGeneratorAction.cc  MYRunAction.cc  MYScintTrigHit.cc  MYScintTrigSD.cc  MYTrackerHit.cc  MYTrackerSD.cc  MaterialFactory.cc  MeV2ChargeConverter.cc  MessageManager.cc  NoiseGenerator.cc  P1DetectorMagnet.cc  P1DetectorParts.cc  PMagneticField.cc  RootSaver.cc  ScintDigit.cc  ScintDigitizer.cc  TrackerDigit.cc  TrackerDigitizer.cc  Utility.cc
reconstruction/Track/: CMakeLists.txt  main.cc
reconstruction/Track/include/: Automaton.h  Crit2_DeltaPhi.h  Crit2_DeltaRho.h  Crit2_DeltaY.h  Crit2_RZRatio.h  Crit3_2DAngle.h  Crit3_2DAngleTimesR.h  Crit3_PT.h  Crit4_2DAngleChange.h  Crit4_DistOfCircleCenters.h  Crit4_NoZigZag.h  Crit4_RChange.h  Criteria.h  DMatrix.h  DVector3.h  Fitter.h  ICriterion.h  IHit.h  ISectorConnector.h  ISectorSystem.h  RiemannFit.h  SectorSystemTracker.h  Segment.h  SegmentBuilder.h  SimpleCircle.h  TrackerHitSimple.h  TrackerNeighborPetalSecCon.h  TrackerSectorConnector.h  jerror.h
reconstruction/Track/src/: Automaton.cc  Crit2_DeltaPhi.cc  Crit2_DeltaRho.cc  Crit2_DeltaY.cc  Crit2_RZRatio.cc  Crit3_2DAngle.cc  Crit3_2DAngleTimesR.cc  Crit3_PT.cc  Crit4_2DAngleChange.cc  Crit4_DistOfCircleCenters.cc  Crit4_NoZigZag.cc  Crit4_RChange.cc  Fitter.cc  IHit.cc  RiemannFit.cc  RiemannFit.cc~  SectorSystemTracker.cc  Segment.cc  SegmentBuilder.cc  SimpleCircle.cc  TrackerHitSimple.cc  TrackerNeighborPetalSecCon.cc  TrackerSectorConnector.cc
